fix(CoursePlanService and CourseService): basically solve N+1 problem at the main points